# stream-diffusion-on-mac-sample

./: README.md  pyproject.toml
app/: stream_diffusion.py  utils.py
app/examples/: web_camera.py
