[tool.poetry]
name = "stream-diffusion-on-mac-sample"
version = "0.1.0"
description = ""
authors = ["kawamou <kazusada.kawamo.nt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchvision = "^0.16.2"
opencv-python = "^4.9.0.80"
streamdiffusion = "^0.1.1"
types-pillow = "^10.2.0.20240111"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
